--- a/previsao_vendas.ipynb
+++ b/previsao_vendas.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -182,7 +182,7 @@
               "9  04/24/19 10:38  915 Willow St, San Francisco, CA 94016  "
             ]
           },
-          "execution_count": 33,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -248,10 +248,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
+        "\n",
         "df.set_index('Order Date', inplace=True)\n",
         "serie_temporal_dia = df.resample('D')['Sales'].sum()\n",
         "serie_temporal_semana = df.resample('W')['Sales'].sum()\n",
@@ -260,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -281,7 +282,7 @@
               "Freq: D, Name: Sales, Length: 366, dtype: float64"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -292,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -1341,7 +1342,7 @@
         "\n",
         "    for produto in produtos:\n",
         "        id_produto = fake.random_int(min=1, max=1000)  # Defina o intervalo apropriado para IDs de produtos\n",
-        "        nome_produto = produto[0]  # Nome do produto\n",
+        "        nome_produto = produto  # Nome do produto\n",
         "        categoria_produto = ''  # Categoria do produto\n",
         "        quantidade_estoque = fake.random_int(min=0, max=1000)  # Quantidade em estoque (ajuste conforme necessário)\n",
         "        values = (id_produto, nome_produto, categoria_produto, quantidade_estoque)\n",
