transformação de dados

--- a/previsao_vendas.ipynb
+++ b/previsao_vendas.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -182,7 +182,7 @@
               "9  04/24/19 10:38  915 Willow St, San Francisco, CA 94016  "
             ]
           },
-          "execution_count": 45,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -204,7 +204,195 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Order ID</th>\n",
+              "      <th>Product</th>\n",
+              "      <th>Quantity Ordered</th>\n",
+              "      <th>Price Each</th>\n",
+              "      <th>Purchase Address</th>\n",
+              "      <th>Sales</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Order Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2019-04-19 08:46:00</th>\n",
+              "      <td>176558</td>\n",
+              "      <td>USB-C Charging Cable</td>\n",
+              "      <td>2</td>\n",
+              "      <td>11.95</td>\n",
+              "      <td>917 1st St, Dallas, TX 75001</td>\n",
+              "      <td>23.90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-07 22:30:00</th>\n",
+              "      <td>176559</td>\n",
+              "      <td>Bose SoundSport Headphones</td>\n",
+              "      <td>1</td>\n",
+              "      <td>99.99</td>\n",
+              "      <td>682 Chestnut St, Boston, MA 02215</td>\n",
+              "      <td>99.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-12 14:38:00</th>\n",
+              "      <td>176560</td>\n",
+              "      <td>Google Phone</td>\n",
+              "      <td>1</td>\n",
+              "      <td>600.00</td>\n",
+              "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+              "      <td>600.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-12 14:38:00</th>\n",
+              "      <td>176560</td>\n",
+              "      <td>Wired Headphones</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11.99</td>\n",
+              "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+              "      <td>11.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-30 09:27:00</th>\n",
+              "      <td>176561</td>\n",
+              "      <td>Wired Headphones</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11.99</td>\n",
+              "      <td>333 8th St, Los Angeles, CA 90001</td>\n",
+              "      <td>11.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-29 13:03:00</th>\n",
+              "      <td>176562</td>\n",
+              "      <td>USB-C Charging Cable</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11.95</td>\n",
+              "      <td>381 Wilson St, San Francisco, CA 94016</td>\n",
+              "      <td>11.95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-02 07:46:00</th>\n",
+              "      <td>176563</td>\n",
+              "      <td>Bose SoundSport Headphones</td>\n",
+              "      <td>1</td>\n",
+              "      <td>99.99</td>\n",
+              "      <td>668 Center St, Seattle, WA 98101</td>\n",
+              "      <td>99.99</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-12 10:58:00</th>\n",
+              "      <td>176564</td>\n",
+              "      <td>USB-C Charging Cable</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11.95</td>\n",
+              "      <td>790 Ridge St, Atlanta, GA 30301</td>\n",
+              "      <td>11.95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-24 10:38:00</th>\n",
+              "      <td>176565</td>\n",
+              "      <td>Macbook Pro Laptop</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1700.00</td>\n",
+              "      <td>915 Willow St, San Francisco, CA 94016</td>\n",
+              "      <td>1700.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-04-08 14:05:00</th>\n",
+              "      <td>176566</td>\n",
+              "      <td>Wired Headphones</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11.99</td>\n",
+              "      <td>83 7th St, Boston, MA 02215</td>\n",
+              "      <td>11.99</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                    Order ID                     Product  Quantity Ordered  \\\n",
+              "Order Date                                                                   \n",
+              "2019-04-19 08:46:00   176558        USB-C Charging Cable                 2   \n",
+              "2019-04-07 22:30:00   176559  Bose SoundSport Headphones                 1   \n",
+              "2019-04-12 14:38:00   176560                Google Phone                 1   \n",
+              "2019-04-12 14:38:00   176560            Wired Headphones                 1   \n",
+              "2019-04-30 09:27:00   176561            Wired Headphones                 1   \n",
+              "2019-04-29 13:03:00   176562        USB-C Charging Cable                 1   \n",
+              "2019-04-02 07:46:00   176563  Bose SoundSport Headphones                 1   \n",
+              "2019-04-12 10:58:00   176564        USB-C Charging Cable                 1   \n",
+              "2019-04-24 10:38:00   176565          Macbook Pro Laptop                 1   \n",
+              "2019-04-08 14:05:00   176566            Wired Headphones                 1   \n",
+              "\n",
+              "                     Price Each                        Purchase Address  \\\n",
+              "Order Date                                                                \n",
+              "2019-04-19 08:46:00       11.95            917 1st St, Dallas, TX 75001   \n",
+              "2019-04-07 22:30:00       99.99       682 Chestnut St, Boston, MA 02215   \n",
+              "2019-04-12 14:38:00      600.00    669 Spruce St, Los Angeles, CA 90001   \n",
+              "2019-04-12 14:38:00       11.99    669 Spruce St, Los Angeles, CA 90001   \n",
+              "2019-04-30 09:27:00       11.99       333 8th St, Los Angeles, CA 90001   \n",
+              "2019-04-29 13:03:00       11.95  381 Wilson St, San Francisco, CA 94016   \n",
+              "2019-04-02 07:46:00       99.99        668 Center St, Seattle, WA 98101   \n",
+              "2019-04-12 10:58:00       11.95         790 Ridge St, Atlanta, GA 30301   \n",
+              "2019-04-24 10:38:00     1700.00  915 Willow St, San Francisco, CA 94016   \n",
+              "2019-04-08 14:05:00       11.99             83 7th St, Boston, MA 02215   \n",
+              "\n",
+              "                       Sales  \n",
+              "Order Date                    \n",
+              "2019-04-19 08:46:00    23.90  \n",
+              "2019-04-07 22:30:00    99.99  \n",
+              "2019-04-12 14:38:00   600.00  \n",
+              "2019-04-12 14:38:00    11.99  \n",
+              "2019-04-30 09:27:00    11.99  \n",
+              "2019-04-29 13:03:00    11.95  \n",
+              "2019-04-02 07:46:00    99.99  \n",
+              "2019-04-12 10:58:00    11.95  \n",
+              "2019-04-24 10:38:00  1700.00  \n",
+              "2019-04-08 14:05:00    11.99  "
+            ]
+          },
+          "execution_count": 72,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -229,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -238,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -248,11 +436,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "df.set_index('Order Date', inplace=True)\n",
         "serie_temporal_dia = df.resample('D')['Sales'].sum()\n",
         "serie_temporal_semana = df.resample('W')['Sales'].sum()\n",
@@ -261,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -282,7 +469,7 @@
               "Freq: D, Name: Sales, Length: 366, dtype: float64"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 73,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -373,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,17 +574,17 @@
           "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 186305 entries, 0 to 186849\n",
+            "DatetimeIndex: 185950 entries, 2019-04-19 08:46:00 to 2019-09-30 00:18:00\n",
             "Data columns (total 6 columns):\n",
-            " #   Column            Non-Null Count   Dtype \n",
-            "---  ------            --------------   ----- \n",
-            " 0   Order ID          186305 non-null  object\n",
-            " 1   Product           186305 non-null  object\n",
-            " 2   Quantity Ordered  186305 non-null  object\n",
-            " 3   Price Each        186305 non-null  object\n",
-            " 4   Order Date        186305 non-null  object\n",
-            " 5   Purchase Address  186305 non-null  object\n",
-            "dtypes: object(6)\n",
+            " #   Column            Non-Null Count   Dtype  \n",
+            "---  ------            --------------   -----  \n",
+            " 0   Order ID          185950 non-null  object \n",
+            " 1   Product           185950 non-null  object \n",
+            " 2   Quantity Ordered  185950 non-null  int64  \n",
+            " 3   Price Each        185950 non-null  float64\n",
+            " 4   Purchase Address  185950 non-null  object \n",
+            " 5   Sales             185950 non-null  float64\n",
+            "dtypes: float64(2), int64(1), object(3)\n",
             "memory usage: 9.9+ MB\n"
           ]
         }
